[gd_scene load_steps=3 format=3 uid="uid://uioqp0kbqpey"]

[ext_resource type="Script" path="res://Game/Scenes/LoadingScene.gd" id="1_jvagw"]
[ext_resource type="Script" path="res://Game/Engine/Async/AsyncNode.gd" id="2_6bcjf"]

[node name="LoadingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvagw")

[node name="AsyncNode" type="Node" parent="."]
script = ExtResource("2_6bcjf")

[node name="ResourceName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -96.0
offset_right = 220.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.002

[node name="TimerBegin" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="TimerComplete" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="TimerBegin" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerComplete" to="." method="_on_timer_complete_timeout"]
